--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,13 @@
 }
 
 body {
+    height: 100vh;
     line-height: calc(1em + 0.5rem);
+    display: grid;
+    grid-template: 3fr 11fr / 1fr 3fr;
+    grid-template-areas:
+        "sidebar    header"
+        "sidebar    main-container"
 }
 
 img {
@@ -37,4 +43,23 @@ p {
 
 h1, h2, h3, h4, h5, h6 {
     text-wrap: balance;
+}
+
+li {
+    list-style-type: none;
+}
+
+.header {
+    grid-area: header;
+    background: green
+}
+
+.sidebar {
+    grid-area: sidebar;
+    background: blue;
+}
+
+.main-container {
+    grid-area: main-container;
+    background: purple;
 }
